--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <ion-icon name="reader-outline"></ion-icon>
           Flashcard set
         </a>
-        <a class="clickable">
+        <a onclick="checkJSON()" class="clickable">
           <ion-icon name="folder-outline" id="settings-icon"></ion-icon>
           Folder
         </a>
@@ -146,54 +146,10 @@
             <div class="card"></div>
           </div>
         </section>
-
-        <section>
-          <h3>Recent</h3>
-          <div class="section-body">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-          </div>
-        </section>
-
-        <section>
-          <h3>Recent</h3>
-          <div class="section-body">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-          </div>
-        </section>
-
-        <section>
-          <h3>Recent</h3>
-          <div class="section-body">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-          </div>
-        </section>
-
-        <section>
-          <h3>Recent</h3>
-          <div class="section-body">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-          </div>
-        </section>
-
-        <section>
-          <h3>Recent</h3>
-          <div class="section-body">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-          </div>
-        </section>
       </div>
     </main>
   </body>
 
   <script src="main.js"></script>
+  <script src="api.js"></script>
 </html>
