--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
   <body>
     <header>
       <div>
-        <div id="menu-bar">
-          <ion-icon
-            name="menu-outline"
-            onclick="toggleMenu()"
-            id="menu-icon"
-          ></ion-icon>
+        <div id="menu-bar" class="clickable" onclick="toggleMenu()">
+          <ion-icon name="menu-outline" id="menu-icon"></ion-icon>
         </div>
 
         <div>
@@ -56,7 +52,7 @@
       <nav id="add-modal" class="modal">
         <a onclick="FlashcardPage()" class="clickable">
           <ion-icon name="reader-outline"></ion-icon>
-          Flashcard set
+          Flashcard
         </a>
         <a onclick="checkJSON()" class="clickable">
           <ion-icon name="folder-outline" id="settings-icon"></ion-icon>
@@ -137,19 +133,11 @@
     </nav>
 
     <main id="main">
-      <div class="container" id="dynamic-container">
-        <section>
-          <h3>Recent</h3>
-          <div class="section-body">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-          </div>
-        </section>
-      </div>
+      <div class="container" id="dynamic-container"></div>
     </main>
   </body>
 
-  <script src="main.js"></script>
-  <script src="api.js"></script>
+  <script src="js/page.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/api.js"></script>
 </html>
