--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div id="search-icon">
             <ion-icon name="search-outline"></ion-icon>
           </div>
-          <input placeholder="Search Quiz" />
+          <input placeholder="Search Quiz" id="search-quiz" />
         </div>
       </div>
 
@@ -134,6 +134,8 @@
         </ul>
       </div>
     </nav>
+
+    <div id="search-results" class="hidden"></div>
 
     <main id="main">
       <div class="container" id="dynamic-container"></div>
